@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2008, 2014, Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2008, 2015, Oracle and/or its affiliates. All rights reserved.
 #
 # The MySQL Connector/C++ is licensed under the terms of the GPLv2
 # <http://www.gnu.org/licenses/old-licenses/gpl-2.0.html>, like most
@@ -302,10 +302,26 @@ IF(WIN32)
     ARCHIVE DESTINATION lib
   )
 ELSE(WIN32)
-  INSTALL(TARGETS mysqlcppconn mysqlcppconn-static
-    LIBRARY DESTINATION ${INSTALL_LIBDIR}
-    ARCHIVE DESTINATION ${INSTALL_LIBDIR}
-  )
+  IF(ENABLE_BUILD_DYNAMIC OR ENABLE_BUILD_STATIC)
+    IF(ENABLE_BUILD_DYNAMIC)
+      INSTALL(TARGETS mysqlcppconn
+        LIBRARY DESTINATION ${INSTALL_LIBDIR}
+        ARCHIVE DESTINATION ${INSTALL_LIBDIR}
+      )
+    ENDIF(ENABLE_BUILD_DYNAMIC)
+
+    IF(ENABLE_BUILD_STATIC)
+      INSTALL(TARGETS mysqlcppconn-static
+        LIBRARY DESTINATION ${INSTALL_LIBDIR}
+        ARCHIVE DESTINATION ${INSTALL_LIBDIR}
+      )
+    ENDIF(ENABLE_BUILD_STATIC)
+  ELSE(ENABLE_BUILD_DYNAMIC OR ENABLE_BUILD_STATIC)
+    INSTALL(TARGETS mysqlcppconn mysqlcppconn-static
+      LIBRARY DESTINATION ${INSTALL_LIBDIR}
+      ARCHIVE DESTINATION ${INSTALL_LIBDIR}
+    )
+  ENDIF(ENABLE_BUILD_DYNAMIC OR ENABLE_BUILD_STATIC)
 ENDIF(WIN32)
 
 
